--- a/org.knime.workbench.repository/src/eclipse/org/knime/workbench/repository/util/style.css
+++ b/org.knime.workbench.repository/src/eclipse/org/knime/workbench/repository/util/style.css
@@ -1,8 +1,22 @@
 /* Import font */
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 
+/* Default font size for old or unscaled browsers. */
 html {
 	font-size: 10px;
+}
+
+/* Catching scaled font sizes and/or retina displays for modern browsers only.
+   Setting font size to 62.5%, so that the default (usually 16px unscaled) is reset to 10px. */
+@media	only screen and (-webkit-min-device-pixel-ratio: 1.2),
+		only screen and (-o-min-device-pixel-ratio: 12/10),
+		only screen and (min-resolution: 115dpi),
+		only screen and (min-resolution: 1.2dppx) {
+	
+	html {
+    	font-size: 62.5%;
+	}
+
 }
 
 body.origin {
@@ -444,16 +458,16 @@ p {
 
 
 h1 {  
-	font-size: 24px;
-	font-size: 2.4rem;
+	font-size: 18px;
+	font-size: 1.8rem;
 	text-align: center;
 	color: #575757;
 	margin: 10px 15px 10px 15px;
  }
 
 h2{
-	font-size: 18px;
-	font-size: 1.8rem;
+	font-size: 16px;
+	font-size: 1.6rem;
 	margin:8px;
 	border-bottom: 1px solid #e5e5e5;
   	color: #ff9f00;
